--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/node": "^18",
+    "@types/node": "^18.16.3",
     "autoprefixer": "^10.4.14",
-    "nuxt": "^3.4.2",
+    "nuxt": "^3.4.3",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "turbo": "^1.9.3"
   },
   "dependencies": {
+    "@vercel/node": "^3.0.7",
     "@vercel/postgres": "^0.1.3",
+    "h3": "^1.8.2",
     "ms": "^2.1.3",
+    "pg": "^8.11.3",
+    "sequelize": "^6.33.0",
     "ws": "^8.13.0"
   }
 }
