--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@vercel/node": "^3.0.7",
     "@vercel/postgres": "^0.1.3",
+    "express": "^4.18.2",
     "h3": "^1.8.2",
     "ms": "^2.1.3",
     "pg": "^8.11.3",
